# daedalus

./: .gitignore  MANIFEST.in  README.md  __init__.py  alerts.py  daedalus_cli.py  formatters.py  migration.py  observability_overrides.py  plugin.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  runtime.py  schemas.py  tools.py  watch.py  watch_sources.py
adapters/: __init__.py
assets/: sprints-architecture-diagram.html
daedalus/: __init__.py  alerts.py  daedalus_cli.py  formatters.py  migration.py  runtime.py  schemas.py  tools.py  watch.py  watch_sources.py
docs/: README.md  architecture-diagram.html  architecture.md  contributing.md  harness-engineering.md  operator-cheat-sheet.md  positioning.md  public-contract.md  release-readiness.md  restructure-shim-audit.md  security.md  slash-commands-catalog.md  symphony-conformance.md
scripts/: bootstrap.sh  build_banner_gif.py  daedalus-ticket-progress  install.py  migrate_config.py  release_scorecard.py  smoke-live.sh  smoke_live.py
skills/: README.md
sprints/: __init__.py  sprints_cli.py
tests/: test_auto_merge_readiness.py  test_change_delivery_codex_app_server_smoke.py  test_change_delivery_contract_model.py  test_change_delivery_provider_neutral_terms.py  test_code_hosts_github.py  test_config_snapshot.py  test_config_watcher.py  test_daedalus_db_schema_migration.py  test_daedalus_migration.py  test_daedalus_observability_cli.py  test_daedalus_watch_cli.py  test_daedalus_watch_render.py  test_daedalus_watch_sources.py  test_docs_public_workflow_template.py  test_engine_primitives.py  test_event_taxonomy.py  test_external_reviewer_phase_b.py  test_external_reviewer_repair_handoff_prompt.py  test_external_reviewer_schema.py  test_formatters.py  test_formatters_active_gate.py  test_formatters_doctor.py  test_formatters_get_observability.py  test_formatters_no_info_loss.py  test_formatters_service_status.py  test_formatters_shadow_report.py  test_formatters_status.py  test_install.py  (+99 more)
(+337 files in other folders)
