[project]
name = "sprints-workspace"
version = "0.3.0"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/core",
  "packages/cli",
  "packages/tui",
  "packages/web",
  "packages/mob",
  "packages/plugins/hermes",
  "packages/plugins/openclaw",
]

[tool.uv.sources]
sprints-core = { workspace = true }
sprints-cli = { workspace = true }
sprints-tui = { workspace = true }
sprints-web = { workspace = true }
sprints-mobile = { workspace = true }
sprints-hermes-plugin = { workspace = true }
sprints-openclaw-plugin = { workspace = true }

[dependency-groups]
dev = [
  "ruff>=0.14.0",
  "sprints-cli",
  "sprints-hermes-plugin",
]

[tool.ruff]
target-version = "py311"
